objects/agf__SLA_Violation__c.object
<CustomObject>
    <fields>
        <fullName>agf__Age__c</fullName>
        <description>Number of days the SLA Violation has been open. Stops increasing once the SLA Violation is closed.</description>
        <formula>IF(ISNULL(agf__Closed_Date__c),
  CEILING(NOW() - CreatedDate),
  CEILING(agf__Closed_Date__c  - CreatedDate)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Investigation Assignee at the time the SLA Violation was logged</description>
        <inlineHelpText>Investigation Assignee, or Support Contact, at the time the SLA violation occurred</inlineHelpText>
        <label>SLA Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SLA_Violations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Closed_Date__c</fullName>
        <description>Date and Time when the SLA Violation was corrected/closed</description>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>agf__Closed__c</fullName>
        <formula>ISPICKVAL(agf__Status__c,&quot;Closed&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>agf__Severity_Level__c</fullName>
        <label>Severity Level</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Team__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Team assigned to the investigation when SLA was violated</description>
        <label>Team</label>
        <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
        <relationshipLabel>SLA Violations</relationshipLabel>
        <relationshipName>SLA_Violations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Acknowledgment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Work__c</fullName>
        <label>Work</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>agf__ADM_Work__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Investigation</value>
            </filterItems>
            <infoMessage>Related Work record must be an Investigation</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>SLA Violations</relationshipLabel>
        <relationshipName>SLA_Violations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>SLA Violation</label>
    <nameField>
        <displayFormat>SLA-{000000}</displayFormat>
        <label>SLA Violation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLA Violations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>